[metadata]
name = iris_cortexanalyzer_module
version = 0.1.0
description = `iris-cortexanalyzer-module` is a IRIS pipeline/processor module created with https://github.com/dfir-iris/iris-skeleton-module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/socfortress/iris-cortexanalyzer-module
author = SOCFortress
author_email = info@socfortress.co
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    iris_cortexanalyzer_module
    iris_cortexanalyzer_module.cortexanalyzer_handler
install_requires =
    certifi==2021.10.8
    cortex4py~=2.1
    idna==3.3
    iris-interface==1.2.0
    setuptools
python_requires = >=3.9
